upgrade to godot 4.2.2 (using plugin v2) upgrading gradle as a suggestion of IDE

--- a/GodotBluetooth344/build.gradle
+++ b/GodotBluetooth344/build.gradle
@@ -23,6 +23,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    namespace 'com.example.godotbluetooth344'
 }
 
 dependencies {
@@ -35,4 +36,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation "androidx.activity:activity:1.4.0"
     implementation "androidx.fragment:fragment:1.4.1"
+    implementation 'org.godotengine:godot:4.2.2.stable'
 }
